--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.2.51'
     repositories {
+        mavenLocal()
         jcenter()
     }
     dependencies {
