--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,20 @@ buildscript {
     }
 }
 
-apply plugin: 'kotlin'
-
 repositories {
     mavenLocal()
     jcenter()
+}
+
+apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = 'example.Hello'
+
+defaultTasks 'run'
+
+compileKotlin {
+    kotlinOptions.jvmTarget = '1.8'
 }
 
 dependencies {
